# mytraderpal

./: .coveragerc  .dockerignore  .gitignore  ALPINE_EXPLAINED.md  ASSIGNMENT_CHECKLIST.md  AUTH_DEV_MODE_FIX.md  BACKEND_AWS_CREDENTIALS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CONTAINERIZATION_STATUS.md  CONTAINERIZATION_VERIFIED.md  DEVELOPMENT.md  DOCKER_CONNECTION_FIX.md  DOCKER_NETWORK_FIX.md  DOCKER_SETUP.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  ENV_FILE_FIX.md  ENV_SETUP.md  HOT_RELOAD_SETUP.md  LAMBDA_TESTING.md  LOCAL_DEV_TEST.md  MIGRATION_GUIDE.md  Makefile  NETWORK_ISSUE_SOLUTIONS.md  QUICK_START.md  README.md  REORGANIZATION.md  REORGANIZATION_COMPLETE.md  REPORT.md  TESTING.md  TEST_REPORT.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  test_local.py
cdk/: package-lock.json  package.json  tsconfig.json
docs/: ADDING_NEW_FEATURES.md  ARCHITECTURE.md  ASSIGNMENT_CHECKLIST.md  AUTH_DEV_MODE_FIX.md  AWS_AUTHENTICATION.md  CHANGES_SUMMARY.md  CI_CD_ANALYSIS.md  CI_CD_FIX_GUIDE.md  CI_CD_STATUS.md  CLEANUP.md  CONTAINERIZATION_STATUS.md  CONTAINERIZATION_VERIFIED.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_TO_DEPLOYMENT.md  DOCKER_CONNECTION_FIX.md  DOCKER_SETUP.md  DOCKER_TROUBLESHOOTING.md  ENV_FILES_EXPLAINED.md  ENV_FILE_FIX.md  ENV_SETUP.md  ENV_VARIABLES.md  GETTING_STARTED.md  QUICK_START.md  REORGANIZATION.md  REPORT.md  SDLC.md  TERRAFORM_TFVARS.md  TEST_REPORT.md
frontend/: env.example  package-lock.json  package.json
monitoring/: grafana-dashboard.json  (+1 more)
(+123 files in other folders)
