[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytraderpal"
version = "0.1.0"
description = "A trading journal application for tracking trades, strategies, and market observations"
authors = [
    {name = "Luis Infante", email = "linfante.ieu2023@student.ie.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.semantic_release]
version_variable = "pyproject.toml:project:version"
branch = "main"
upload_to_pypi = false
upload_to_release = true
changelog_file = "CHANGELOG.md"
commit_parser = "semantic_release.commit_parser.angular:parser"
tag_format = "v{version}"
changelog_sections = ["feature", "fix", "docs", "style", "refactor", "test", "chore"]
